# horsemackerel

./: CHANGELOG.md  horsemackerel.cabal
app/: Main.hs
elisp/: horsemackerel.el
