cabal-version:      3.0
name:               horsemackerel
version:            0.0.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tom Ellis
maintainer:         tom-git@jaguarpaw.co.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable horsemackerel
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, aeson, bytestring, bluefin, filepath, typed-process
    hs-source-dirs:   app
    default-language: Haskell2010
